<resources>
    <string name="app_name">CatchMusic</string>
    <string name="api_key"></string>
    <string name="google"></string>

    <string name="t6">t6</string>
    <string name="t1">t1</string>
    <string name="t2">t2</string>
    <string name="t3">t3</string>
    <string name="t4">t4</string>
    <string name="t5">t5</string>

    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="btn_skip_intro">Skip Intro</string>


    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

</resources>
